<resources>
    <string name="app_name">নূরানী নামাজ শিক্ষা</string>
    <string name="nav_open">nav open</string>
    <string name="nav_close">nav close</string>
    <string name="compass_hands">Compass Hands</string>


    <string name="ojur_foroj">

        ১. সমস্ত মুখমন্ডল কপালের উপরিভাগের চুলের গোড়া হইতে থুতনী পর্যন্ত, এক কর্নের লতি থেকে অন্য কর্নের লতি পর্যন্ত ধৌত করা।\n
        ২.উভয় হাত কনুইসহ ধৌত করা।\n
        ৩.চারভাগের একভাগ মাথা মাসেহ করা ( ঘন দাঁড়ি থাকিলে আঙ্গুলী দ্বারা খেলাল করা ফরয )।\n
        ৪.উভয় পা টাখনু গিরা সহকারে ধৌত করা ।</string>

    <string name="ojur_sunnat">
        ১.নিয়ত করা\n
        ২.বিসমিল্লাহ্‌ বলে ওযু শুরু করা\n
        ৩.হাতের আঙ্গুল খিলাল করা\n
        ৪.উভয় হাত কবজি পর্যন্ত ধৌত করা\n
        ৫.মিসওয়াক করা\n
        ৬.তিনবার কুলি করা\n
        ৭.তিনবার নাকে পানি দেয়া\n
        ৮.সম্পূর্ন মুখ মন্ডল তিনবার ধৌত করা\n
        ৯.উভয় হাতের কনুইসহ তিনবার ধৌত করা\n
        ১০.সমস্ত মাথা একবার মাসেহ করা\n
        ১১.টাখনু সহ উভয় পা তিবার ধৌত করা\n
        ১২.পায়ের আঙ্গুল খিলাল করা\n
        ১৩.এক অঙ্গ শুকানোর পূর্বে অন্য অঙ্গ ধৌত করা\n
        ১৪.ধারাবাহিকতা বজায় রেখে ওযুর কাজ গুলো সম্পূর্ন করা।</string>

    <string name="dowa_masura_bangla_spell">আল্লাহুম্মা ইন্নি যালামতু নাফসি জুল মান কাসিরাও,ওয়ালা ইয়াগ ফিরুজ্জনুবাকা,ইল্লা আন্তা ফাগফিরালি মাগফিরাতাম্মিন ইন্দিকা ওয়ারহামনি,ইন্নাকা আনতাল গাফুরুর রাহিম।</string>
    <string name="esha_bi_drostobbo">বিঃদ্রঃফজর,জহুর,আছর ও মাগরিবের নামাজ বেশি দেরি না করে ওয়াক্ত হয়ে যাবার কিছু সময়ের মধ্যেই আদায় করে নেয়া উত্তম। কোন কারনে সময় সম্পর্কে যদি খেয়াল না থাকে বা ঘুমিয়ে থাকলে বা কোন বিশেষ কারনে কোন নির্দিষ্ট নামাজের ওয়াক্তের সময় পেরিয়ে গেলে যত তাড়াতাড়ি সম্ভব তা আদায় করে নিতে হবে। এক্ষেত্রে অবশ্যই নামাজের ধারাবাহিকতা বজায় রাখতে হবে অর্থাৎ যে ওয়াক্তের নামাজ মিস হয়েছে তা আগে আদায় কোরে নিতে হবে। যেমন সূর্যাস্তের আগে আছরের নামাজ আদায় করা সম্ভব না হলে সূর্যাস্তের পর আগে আছরের নামাজ এবং তারপর মাগরিবের নামাজ আদায় করতে হবে। তবে এর জন্য মহান আল্লাহ তায়ালার কাছে ক্ষমা চেয়ে নিতে হবে। সফরে থাকলে মাগরিব একটু দেরিতে পড়ে তার পরপরই ইশার নামাজ আদায় করে নেয়ার অবকাশ রয়েছে। আবার সূর্য ঢলে পড়ার আগে সফরে বের হলে যোহর একটু দেরিতে পড়ে একসাথে আছরের নামাজ আদায় করে নেয়া যায়।</string>
    <string name="eshar_namazer_wakt">এশারঃ-গোধুলী পেরিয়ে রাতের অন্ধকার ঘনিয়ে আসার পর হতে এই নামাজের ওয়াক্ত শুরু হয় এবং রাতের এক তৃতীয়াংশ সময় থেকে মধ্যরাত পর্যন্ত যে কোন সময়ে নামাজ আদায় করে নেয়া যেতে পারে।</string>

    <string name="tasbih">
        ১। ফজরের নামাজের তাসবিহ\n
বাংলায় : (হুয়াল হাইয়্যুল কাইয়্যুম।)-তিনি চির জীবিত ও চিরস্থায়ী।\n\n
২। জোহরের নামাজের তাসবিহ\n
বাংলায় : (হুয়াল আলিইয়্যাল আজীম)-তিনি শ্রেষ্ট্রতর অতি মহান।\n\n
৩। আছরের নামাজের তাসবিহ\n
বাংলায় : (হুয়ার রাহমা- নুর রাহীম)-তিনি কৃপাময় ও করুনা নিধান।\n\n
৪। মাগরিবের নামায পড়ে পরিবার তাসবিহ\n
বাংলায় : (হুয়াল গাফুরুর রাহীম)- তিনি মার্জনাকারী ও করুণাময়।\n\n
৫। এশার নামায পড়ে পরিবার তাসবিহ\n
বাংলায় : (হুয়াল্ লাতিফুল খাবীর)- তিনি পাক ও অতিশয় সতর্কশীল।\n\n
    </string>
    <string name="namajer_rukun_kom_howa">ক) যদি ভুলক্রমে ওয়াজিব পরিত্যাগ হয় আর উক্ত স্থান ছেড়ে যাওয়ার আগেই যদি স্মরণ হয়ে যায় তবে তা আদায় করবে এতে কোন দোষ নেই- সাহু সিজদা দিতে হবে না। কিন্তু যদি উক্ত ওয়াজিব ছেড়ে পরবর্তী রুকন শুরু করার আগেই স্মরণ হয়ে যায় তবে ফিরে গিয়ে সেই ওয়াজিব আদায় করবে এবং শেষে সাহু সিজদা করবে। কিন্তু পরবর্তী রুকন শুরু করার পর যদি স্মরণ হয় তবে উক্ত ছুটে যাওয়া ওয়াজিব রহিত হয়ে যাবে। অবশিষ্ট নামায আদায় করে সালামের পূর্বে সাহু সিজদা করলেই নামায পূর্ণ হয়ে যাবে। যেমন কেউ দ্বিতীয় রাকাতের দ্বিতীয় সিজদা থেকে উঠে না বসে তৃতীয় রাকাতের জন্য দাঁড়াতে যাচ্ছে। এমন সময় স্মরণ হল নিজ ভুলের কথা। তখন সে বসে পড়বে এবং তাশাহুদ পড়ে সালাত পূর্ণ করবে। কোন সাহু সিজদা লাগবে না। আর যদি কিছুটা দাঁড়ায় কিন্তু পরিপূর্ণরূপে দাঁড়ায়নি তবে সে বসে যাবে এবং তাশাহুদ পড়বে ও সালাত শেষে সাহু সিজদা করে সালাম ফিরাবে। কিন্তু যদি পূর্ণরূপে দাঁড়িয়ে পড়ে তবে আর বসবে না। তাশাহুদ রহিত হয়ে যাবে। ঐভাবেই নামায পূর্ণ করবে এবং সালাম ফিরানোর পূর্বে সাহু সিজদা করবে। \n\n
        খ) ফরজ নামাজের প্রথম ২ রাকাতে সুরা ফাতেহা পড়ার পর অন্য একটি সুরা মিলানো ওয়াজিব। যদি আপনি ভুল করে ফরজ নামাজের প্রথম ২ রাকাতে সুরা ফাতেহা পড়ার পর অন্য কোনো সুরা না পড়েন, তাহলে আপনাকে সিজদায়ে সাহু দিতে হবে। আপনি যদি যে কোনো সুন্নাত/নফল নামাজের যে কোনো রাকাতে সুরা ফাতেহা বা সুরা ফাতেহার পর অন্য একটি সুরা না পড়েন তাহলে আপনাকে সিজদায়ে সাহু দিতে হবে। \n\n
        সন্দেহ হওয়া: নামাযের মধ্যে সন্দেহের দু‘টি অবস্থা: প্রথম অবস্থা: সন্দেহযুক্ত দু‘টি বিষয়ের মধ্যে যেটির প্রাধান্য পাবে সে অনুযায়ী কাজ করবে এবং নামায পূর্ণ করে সাহু সিজদা করে সালাম ফিরাবে। উদাহরণ: একজন লোক যোহরের নামায আদায় করছে। কিন্তু সন্দেহ হল এখন সে কি দ্বিতীয় রাকাতে না তৃতীয় রাকাতে? এ সময় সে অনুমান করে স্থির করবে কোনটা ঠিক। যদি অনুমান প্রাধান্য পায় যে এটা তৃতীয় রাকাত, তবে তা তৃতীয় রাকাত গণ্য করে নামায পূর্ণ করবে এবং সালাম ফেরানোর পর সাহু সিজদা করবে।\n\n
        দ্বিতীয় অবস্থা: সন্দেহযুক্ত দু‘টি দিকের কোনটাই প্রাধান্য পায় না। এ অবস্থায় নিশ্চিত দিকটির উপর ভিত্তি করবে। অর্থাৎ কম সংখ্যাটি নির্ধারণ করে বাকী নামায পূর্ণ করবে। তারপর সাহু সিজদা করে সালাম ফিরাবে। একই নামাজে সিজদায়ে সাহু করার একাধিক কারণ পাওয়া গেলেও একটি সিজদায়ে সাহু করলেই হবে।</string>
    <string name="close">Close</string>
    <string name="send_email">Send Email</string>
    <string name="join_facebook_group">Join Facebook Group</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="developer_info">Developer info</string>
    <string name="ruqyah_treatments">রুকইয়াহ চিকিৎসা</string>
    <string name="islamic_blog">ইসলামিক ব্লগ</string>
    <string name="nobi_jiboni">নবীদের জীবনী</string>


</resources>